src/test/resources/Parser/SyntaxErrors/IncompatibleTypesWhile.front
class A:
    test (bool[][] b) {
        while(b[1]){}
    }